--- a/css/theme/source/custom.scss
+++ b/css/theme/source/custom.scss
@@ -35,6 +35,11 @@ h3{
     font-weight: 600 !important;
 }
 
+li{
+    font-size: 38px;
+    font-weight: 100 !important;
+}
+
 // Theme template ------------------------------
 @import "../template/theme";
 // ---------------------------------------------
